--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
-<img src="logo.png">
-<p> <b>404.</b> That's an error.<p/>
-<p> The requested URL /seifofs%C3%B2fis was not found on this server. That's all we know. </p>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title>Error 404 (not found)!!1</title>
+		<meta charset="UTF-8">
+		<meta lang="en">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+
+	<style>
+		span {
+		   background-color:grey;
+		}
+		
+		img {
+		   background-color:orange;
+	  	   
+		}
+ 	</style>
+	
+	<body>
+		<img src="logo.png">
+		<p><span>404. That's an error.</span></p>
+		
+		<p> The requested URL /seifofs%C3%B2fis was not found on this server. That's all we know. </p>
+	<body>
+</html>
