--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 	<head>
 
 	<style>
-		span {
-		   background-color:grey;
+		body {
+			margin: 7% auto 0;
+			width: 50%;
 		}
-		
-		img {
-		   background-color:orange;
-	  	   
-		}
+		#status-code {
+			font-weight:bold;
  	</style>
 	
 	<body>
 		<img src="logo.png">
-		<p><span>404. That's an error.</span></p>
+		<p><span id="status-code">404.</span>.<span> That's an error.</span></p>
 		
 		<p> The requested URL /seifofs%C3%B2fis was not found on this server. That's all we know. </p>
 	<body>
